Add Achivement info of Clubs & send Tournament info & rules to CLUB